--- a/set_root_pass_ubuntu20.yaml
+++ b/set_root_pass_ubuntu20.yaml
@@ -1,4 +1,4 @@
-- hosts: webserver  (Created by https://github.com/Itsmide)
+- hosts: database  (Created by https://github.com/Itsmide)
   remote_user: root
   become: True
   vars_files:
